--- a/IdentityByExamples/appsettings.json
+++ b/IdentityByExamples/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "sqlConnection": "server=.; database=2022-BBusIdentity-Sample; Integrated Security=true"
   },
+  "EmailConfiguration": {
+    "From": "dastugo1@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "in-user-secrets",
+    "Password": "in-user-secrets"
+  },
   "AllowedHosts": "*"
 }
