added external login with google

--- a/IdentityByExamples/appsettings.json
+++ b/IdentityByExamples/appsettings.json
@@ -16,5 +16,13 @@
     "Username": "in-user-secrets",
     "Password": "in-user-secrets"
   },
+
+  "Authentication": {
+    "Google": {
+      "ClientId": "58989823463-7gllalmi3a9volem1lr7rafijluduhnd.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
+
   "AllowedHosts": "*"
 }
