--- a/IdentityByExamples/appsettings.json
+++ b/IdentityByExamples/appsettings.json
@@ -19,8 +19,8 @@
 
   "Authentication": {
     "Google": {
-      "ClientId": "58989823463-7gllalmi3a9volem1lr7rafijluduhnd.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientId": "in-user-secrets",
+      "ClientSecret": "in-user-secrets"
     }
   },
 
